--- a/templates/base.twig
+++ b/templates/base.twig
@@ -77,5 +77,9 @@
             {% endif %}
         {% endif %}
 
+        {% if cookie['temple-built'] is defined %}
+            <h2>Congratulations {{cookie.username}}, from the {{cookie.village}} village. You won the game.</h2>
+        {% endif %}
+
     </body>
 </html>
