--- a/templates/login.twig
+++ b/templates/login.twig
@@ -1,6 +1,6 @@
 {% extends 'base.twig' %}
 
-{% block content %}
+{% block authentication %}
     <style> input { padding: 10px; } button { padding: 12px; } </style>
     <form method="post">
         <label for="username">Username: </label>
